♻️ [REFACTOR] 변수 이름 수정